src/main/java/lbfgs/LbfgsLibrary.java

			
		};
	};
	public interface lbfgs_evaluate_t extends Callback {
		double apply(Pointer instance, DoubleByReference x, DoubleByReference g, int n, double step);
	};
	public interface lbfgs_progress_t extends Callback {
		int apply(Pointer instance, DoubleByReference x, DoubleByReference g, double fx, double xnorm, double gnorm, double step, int n, int k, int ls);
	};
	/**
	 * Start a L-BFGS optimization.<br>
	 *  @param  n           The number of variables.<br>
	 *  @param  x           The array of variables. A client program can set<br>
	 *                      default values for the optimization and receive the<br>
	 *                      optimization result through this array. This array<br>
	 *                      must be allocated by ::lbfgs_malloc function<br>
	 *                      for libLBFGS built with SSE/SSE2 optimization routine<br>
	 *                      enabled. The library built without SSE/SSE2<br>
	 *                      optimization does not have such a requirement.<br>
	 *  @param  ptr_fx      The pointer to the variable that receives the final<br>
	 *                      value of the objective function for the variables.<br>
	 *                      This argument can be set to \c NULL if the final<br>
	 *                      value of the objective function is unnecessary.<br>
	 *  @param  proc_evaluate   The callback function to provide function and<br>
	 *                          gradient evaluations given a current values of<br>
	 *                          variables. A client program must implement a<br>
	 *                          callback function compatible with \ref<br>
	 *                          lbfgs_evaluate_t and pass the pointer to the<br>
	 *                          callback function.<br>
	 *  @param  proc_progress   The callback function to receive the progress<br>
	 *                          (the number of iterations, the current value of<br>
	 *                          the objective function) of the minimization<br>
	 *                          process. This argument can be set to \c NULL if<br>
	 *                          a progress report is unnecessary.<br>
	 *  @param  instance    A user data for the client program. The callback<br>
	 *                      functions will receive the value of this argument.<br>
	 *  @param  param       The pointer to a structure representing parameters for<br>
	 *                      L-BFGS optimization. A client program can set this<br>
	 *                      parameter to \c NULL to use the default parameters.<br>
	 *                      Call lbfgs_parameter_init() function to fill a<br>
	 *                      structure with the default values.<br>
	 *  @retval int         The status code. This function returns zero if the<br>
	 *                      minimization process terminates without an error. A<br>
	 *                      non-zero value indicates an error.<br>
	 * Original signature : <code>int lbfgs(int, lbfgsfloatval_t*, lbfgsfloatval_t*, lbfgs_evaluate_t, lbfgs_progress_t, void*, lbfgs_parameter_t*)</code><br>
	 * <i>native declaration : line 478</i><br>
	 * @deprecated use the safer methods {@link #lbfgs(int, java.nio.DoubleBuffer, java.nio.DoubleBuffer, lbfgs.LbfgsLibrary.lbfgs_evaluate_t, lbfgs.LbfgsLibrary.lbfgs_progress_t, com.sun.jna.Pointer, lbfgs.LbfgsLibrary.lbfgs_parameter_t)} and {@link #lbfgs(int, com.sun.jna.ptr.DoubleByReference, com.sun.jna.ptr.DoubleByReference, lbfgs.LbfgsLibrary.lbfgs_evaluate_t, lbfgs.LbfgsLibrary.lbfgs_progress_t, com.sun.jna.Pointer, lbfgs.LbfgsLibrary.lbfgs_parameter_t)} instead
	 */
	@Deprecated 
	int lbfgs(int n, DoubleByReference x, DoubleByReference ptr_fx, LbfgsLibrary.lbfgs_evaluate_t proc_evaluate, LbfgsLibrary.lbfgs_progress_t proc_progress, Pointer instance, LbfgsLibrary.lbfgs_parameter_t param);
	/**
	 * Start a L-BFGS optimization.<br>
	 *  @param  n           The number of variables.<br>
	 *  @param  x           The array of variables. A client program can set<br>
	 *                      default values for the optimization and receive the<br>
	 *                      optimization result through this array. This array<br>
	 *                      must be allocated by ::lbfgs_malloc function<br>
	 *                      for libLBFGS built with SSE/SSE2 optimization routine<br>
	 *                      enabled. The library built without SSE/SSE2<br>
	 *                      optimization does not have such a requirement.<br>
	 *  @param  ptr_fx      The pointer to the variable that receives the final<br>
	 *                      value of the objective function for the variables.<br>
	 *                      This argument can be set to \c NULL if the final<br>
	 *                      value of the objective function is unnecessary.<br>
	 *  @param  proc_evaluate   The callback function to provide function and<br>
	 *                          gradient evaluations given a current values of<br>
	 *                          variables. A client program must implement a<br>
	 *                          callback function compatible with \ref<br>
	 *                          lbfgs_evaluate_t and pass the pointer to the<br>
	 *                          callback function.<br>
	 *  @param  proc_progress   The callback function to receive the progress<br>
	 *                          (the number of iterations, the current value of<br>
	 *                          the objective function) of the minimization<br>
	 *                          process. This argument can be set to \c NULL if<br>
	 *                          a progress report is unnecessary.<br>
	 *  @param  instance    A user data for the client program. The callback<br>
	 *                      functions will receive the value of this argument.<br>
	 *  @param  param       The pointer to a structure representing parameters for<br>
	 *                      L-BFGS optimization. A client program can set this<br>
	 *                      parameter to \c NULL to use the default parameters.<br>
	 *                      Call lbfgs_parameter_init() function to fill a<br>
	 *                      structure with the default values.<br>
	 *  @retval int         The status code. This function returns zero if the<br>
	 *                      minimization process terminates without an error. A<br>
	 *                      non-zero value indicates an error.<br>
	 * Original signature : <code>int lbfgs(int, lbfgsfloatval_t*, lbfgsfloatval_t*, lbfgs_evaluate_t, lbfgs_progress_t, void*, lbfgs_parameter_t*)</code><br>
	 * <i>native declaration : line 478</i>
	 */
	int lbfgs(int n, DoubleBuffer x, DoubleBuffer ptr_fx, LbfgsLibrary.lbfgs_evaluate_t proc_evaluate, LbfgsLibrary.lbfgs_progress_t proc_progress, Pointer instance, LbfgsLibrary.lbfgs_parameter_t param);
	/**
	 * Initialize L-BFGS parameters to the default values.<br>
	 *  Call this function to fill a parameter structure with the default values<br>
	 *  and overwrite parameter values if necessary.<br>
	 *  @param  param       The pointer to the parameter structure.<br>
	 * Original signature : <code>void lbfgs_parameter_init(lbfgs_parameter_t*)</code><br>
	 * <i>native declaration : line 496</i>
	 */
	void lbfgs_parameter_init(LbfgsLibrary.lbfgs_parameter_t param);
	/**
	 * Allocate an array for variables.<br>
	 *  This function allocates an array of variables for the convenience of<br>
	 *  ::lbfgs function; the function has a requreiemt for a variable array<br>
	 *  when libLBFGS is built with SSE/SSE2 optimization routines. A user does<br>
	 *  not have to use this function for libLBFGS built without SSE/SSE2<br>
	 *  optimization.<br>
	 *  <br>
	 *  @param  n           The number of variables.<br>
	 * Original signature : <code>lbfgsfloatval_t* lbfgs_malloc(int)</code><br>
	 * <i>native declaration : line 509</i>
	 */
	DoubleByReference lbfgs_malloc(int n);
	/**
	 * Free an array of variables.<br>
	 *  <br>
	 *  @param  x           The array of variables allocated by ::lbfgs_malloc<br>
	 *                      function.<br>
	 * Original signature : <code>void lbfgs_free(lbfgsfloatval_t*)</code><br>
	 * <i>native declaration : line 517</i><br>
	 * @deprecated use the safer methods {@link #lbfgs_free(java.nio.DoubleBuffer)} and {@link #lbfgs_free(com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	void lbfgs_free(DoubleByReference x);
	/**
	 * Free an array of variables.<br>
	 *  <br>
	 *  @param  x           The array of variables allocated by ::lbfgs_malloc<br>
	 *                      function.<br>
	 * Original signature : <code>void lbfgs_free(lbfgsfloatval_t*)</code><br>
	 * <i>native declaration : line 517</i>
	 */
	void lbfgs_free(DoubleBuffer x);
}
